--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
 html{
+    box-sizing: border-box; /*Snippet*/
     font-size: 62.5%; /**Reset para REMS - 62.5% = 10px de 16px**/
+}
+*, *:before, *:after { /*Snippet*/
+    box-sizing: inherit; /*Snippet*/
 }
 /*Fuentes*/
 body{
     font-family: 'Lato', sans-serif;
     font-size: 1.6rem;
+    background-color: whitesmoke;
 }
 
-/*Gloval*/
+/*Glovales*/
+img{
+    max-width: 100%;
+}
 .contenedor{
     max-width: 120rem; /*= 1200px*/
     margin: 0 auto; /*top rigth down left */
-  
+    padding: 2rem;
 }
 h1{
     font-size: 4.0rem;
@@ -32,6 +40,9 @@ h6{
     font-size: 1.5rem; 
 }
 /*Utilidades*/
+.d-block{
+    display: block!important;
+}
 .seccion{
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -41,6 +52,25 @@ h6{
 }
 .centrar-texto{
     text-align: center;
+}
+/*Botones*/
+.boton{
+    text-decoration: none; /*elimina linea de los enlaces*/
+    color: white;
+    font-weight: 700;
+    padding: 1rem 2.5rem;
+    margin: auto;
+}
+.boton-amarillo{
+    background-color: orange;
+}
+.boton-verde{
+    background-color: green;
+}
+.ver-todas{
+    display: grid;
+    justify-content: flex-end;
+    margin-top: 2rem;
 }
 /*Header*/
 
@@ -93,4 +123,58 @@ min-height: 60rem;
 }
 .icono h3{
     text-transform: uppercase;
+}
+
+/*Anuncios*/
+.contenedor-anuncios{
+    display: flex;
+    justify-content: space-between; /*Espacio despues de un elemento*/
+}
+.anuncio{
+    flex-basis: calc(33.3% - 1rem);
+    border-style: solid;
+    border-color: gray;
+    border-width: 0.01rem;
+}
+.contenido-anuncio{
+    padding: 2rem;
+}
+.contenido-anuncio h4, .contenido-anuncio p{
+    margin: 0;
+    padding: 1rem;
+}
+.precio{
+    color: green;
+    font-weight: 700;
+    
+}
+.iconos-caracteristicas{
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+.iconos-caracteristicas li{
+    display: flex;
+}
+.iconos-caracteristicas li img{
+    margin-right: 2rem;
+}
+/*Contacto home*/
+.imagen-contacto{
+    background-image: url(../img/encuentra.jpg);
+    height: 50rem;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+
+}
+.contenido-contacto{
+    flex: 1;
+    color: white;
+    padding: 2rem;
+
+}
+.contenido-contacto p{
+    font-size: 1.7rem;
 }
